tests/functional2/lang/attrs/parse-fail-duplicate-1.err.exp
error: attribute 'x' already defined at /pwd/in.nix:1:3
       at /pwd/in.nix:3:3:
            2|   y = 456;
            3|   x = 789;
             |   ^
            4| }
